--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.0",
-    "fastify": "^4.25.2"
+    "fastify": "^4.25.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
